src/test/ui/lub-glb/old-lub-glb-hr.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/old-lub-glb-hr.rs:18:13
   |
18 |       let z = match 22 { //~ ERROR incompatible types
   |  _____________^
19 | |         0 => x,
20 | |         _ => y,
   | |              - match arm with an incompatible type
21 | |     };
   | |_____^ expected bound lifetime parameter, found concrete lifetime
   |
   = note: expected type `for<'r, 's> fn(&'r u8, &'s u8)`
              found type `for<'a> fn(&'a u8, &'a u8)`
   = note: this was previously accepted by the compiler but has been phased out
   = note: for more information, see https://github.com/rust-lang/rust/issues/45852

error: aborting due to previous error

